--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-full bg-white">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -11,7 +11,7 @@
     />
     <title>React App</title>
   </head>
-  <body>
+  <body class="h-full">
     <div id="root"></div>
   </body>
 </html>
